# tavrida

./: .gitignore  .travis.yml  MANIFEST  README.md  README.rst  doc-requirements.txt  groups  project.config  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
docs/: Makefile  make.bat
docs/source/: client.rst  conf.py  config.rst  controller.rst  discovery.rst  heartbeat.rst  index.rst  installation.rst  messages.rst  middlewares.rst  modules.rst  proxy.rst  tavrida.amqp_driver.rst  tavrida.rst  tutorial.rst
examples/2_friends/: hello_server.py  world_server.py
examples/2_friends_with_config_file/: hello_config.cfg  hello_server.py  world_config.cfg  world_server.py
examples/2_friends_with_ds_file/: hello_server.py  services.ds  world_server.py
examples/client/: app.py
examples/django/hello_world/: settings.py  urls.py
examples/django/my_app/: hello_tavrida.py  models.py
tavrida/: client.py  config.py  configfile.py  controller.py  discovery.py  dispatcher.py  dsfile.py  entry_point.py  exceptions.py  messages.py  middleware.py  postprocessor.py  preprocessor.py  processor.py  proxies.py  router.py  server.py  service.py  steps.py  subscription.py  utils.py
tavrida/amqp_driver/: base.py  driver.py  pika_amqp.py  pika_async.py  pika_aync.py  pika_sync.py
tests/: _test_dispatcher.py  test_config.py  test_discovery.py  test_dispatcher.py  test_dsfile.py  test_entry_point.py  test_middleware.py  test_postprocessor.py  test_preprocessor.py  test_router.py  test_service.py  test_steps.py
tests/amqp_driver/: test_driver.py
(+1 files in other folders)
