[metadata]
name = tavrida
summary = Tavrida RPC over AMQP
description-file = README.rst
author = Sergey Bunatyan
author-email = sergey@bunatian.ru
home-page =
classifier =
    Environment :: Business
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[files]
packages = tavrida
